--- a/previews/PR437/examples/docs_4_rational_opt/index.html
+++ b/previews/PR437/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   5.636031e-01   1.774298e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   5.648622e-01   3.540687e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   5.663206e-01   5.297353e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   5.682916e-01   7.038640e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   5.709052e-01   8.758021e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   5.728811e-01   1.047338e+02
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   5.756000e-01   1.216122e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   5.784001e-01   1.383126e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   5.810055e-01   1.549039e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   5.842828e-01   1.711500e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   5.852975e-01   1.725618e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   6.057570e-01   1.650827e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   6.077689e-01   3.290725e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.098233e-01   4.919458e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.120926e-01   6.534959e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.144544e-01   8.137301e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.169978e-01   9.724508e+01
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.198990e-01   1.129216e+02
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.227366e-01   1.284652e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.254582e-01   1.438945e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.283916e-01   1.591364e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.294734e-01   1.604516e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   1.081418e+00   9.247117e+00
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   1.083271e+00   1.846261e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   1.085246e+00   2.764351e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   1.087442e+00   3.678359e+01
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   1.089895e+00   4.587598e+01
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   1.092643e+00   5.491273e+01
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   1.095636e+00   6.388986e+01
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   1.098876e+00   7.280167e+01
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   1.102305e+00   8.164709e+01
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   1.105985e+00   9.041716e+01
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   1.106839e+00   9.034740e+01
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   5.340897e-01   1.872345e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   5.364837e-01   3.727979e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   5.383032e-01   5.573067e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   5.405319e-01   7.400118e+01
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   5.429887e-01   9.208295e+01
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   5.457578e-01   1.099389e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   5.488516e-01   1.275390e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   5.524443e-01   1.448110e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   5.562061e-01   1.618105e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   5.603243e-01   1.784681e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   5.612646e-01   1.781691e+02
 -------------------------------------------------------------------------------------------------
-  1.404336 seconds (1.58 M allocations: 88.707 MiB, 42.07% gc time, 0.97% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Friday 13 October 2023 16:14">Friday 13 October 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  0.897871 seconds (1.58 M allocations: 88.753 MiB, 1.66% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Friday 13 October 2023 16:17">Friday 13 October 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
